<resources>
    <string name="app_name">Gigih Final Project</string>
    <string name="desc_go_to_settings_screen">Go to settings screen</string>
    <string name="hint_search_here">Cari disini</string>
    <string name="desc_clear_text">Clear text</string>
    <string name="label_latest_disaster_information">Informasi Bencana Terkini</string>
    <string name="desc_close_bottom_sheet">Close Bottom Sheet</string>
    <string name="desc_back_to_home_screen">Back to home screen</string>
    <string name="label_settings">Settings</string>

    <string name="today_disaster_period_name">Hari ini</string>

    <string name="default_disaster_timeperiod_name">Tiga hari yang lalu</string>
    <integer name="default_disaster_timeperiod_second">259200</integer>

    <!--  Disaster Time Period Names  -->
    <string-array name="disaster_time_period_names">
        <item>Hari ini</item>
        <item>Satu hari yang lalu</item>
        <item>Dua hari yang lalu</item>
        <item>Tiga hari yang lalu</item>
        <item>Empat hari yang lalu</item>
        <item>Lima hari yang lalu</item>
        <item>Enam hari yang lalu</item>
        <item>Satu minggu yang lalu</item>
    </string-array>

    <!--  Disaster Time Period Seconds  -->
    <integer-array name="disaster_time_period_seconds">
        <item>0</item>
        <item>86400</item>
        <item>172800</item>
        <item>259200</item>
        <item>345600</item>
        <item>432000</item>
        <item>518400</item>
        <item>604800</item>
    </integer-array>


    <!--  Disaster List  -->
    <string-array name="disaster_names">
        <item>Banjir</item>
        <item>Gempa Bumi</item>
        <item>Kebakaran</item>
        <item>Kabut</item>
        <item>Angin Topan</item>
        <item>Gunung Meletus</item>
    </string-array>

    <string-array name="disaster_codes">
        <item>flood</item>
        <item>earthquake</item>
        <item>fire</item>
        <item>haze</item>
        <item>wind</item>
        <item>volcano</item>
    </string-array>

    <!--  Province List  -->
    <string-array name="province_names">
        <item>Jawa Tengah</item>
        <item>Jawa Timur</item>
        <item>Kalimantan Timur</item>
        <item>Nusa Tenggara Timur</item>
        <item>Gorontalo</item>
        <item>DKI Jakarta</item>
        <item>Jambi</item>
        <item>Lampung</item>
        <item>Maluku</item>
        <item>Kalimantan Utara</item>
        <item>Maluku Utara</item>
        <item>Sulawesi Utara</item>
        <item>Sumatera Utara</item>
        <item>Papua</item>
        <item>Riau</item>
        <item>Kepulauan Riau</item>
        <item>Sulawesi Tenggara</item>
        <item>Kalimantan Selatan</item>
        <item>Sulawesi Selatan</item>
        <item>Sumatera Selatan</item>
        <item>DI Yogyakarta</item>
        <item>Jawa Barat</item>
        <item>Kalimantan Barat</item>
        <item>Nusa Tenggara Barat</item>
        <item>Papua Barat</item>
        <item>Sulawesi Barat</item>
        <item>Sumatera Barat</item>
    </string-array>

    <string-array name="province_codes">
        <item>ID-JT</item>
        <item>ID-JI</item>
        <item>ID-KI</item>
        <item>ID-NT</item>
        <item>ID-GO</item>
        <item>ID-JK</item>
        <item>ID-JA</item>
        <item>ID-LA</item>
        <item>ID-MA</item>
        <item>ID-KU</item>
        <item>ID-MU</item>
        <item>ID-SA</item>
        <item>ID-SU</item>
        <item>ID-PA</item>
        <item>ID-RI</item>
        <item>ID-KR</item>
        <item>ID-SG</item>
        <item>ID-KS</item>
        <item>ID-SN</item>
        <item>ID-SS</item>
        <item>ID-YO</item>
        <item>ID-JB</item>
        <item>ID-KB</item>
        <item>ID-NB</item>
        <item>ID-PB</item>
        <item>ID-SR</item>
        <item>ID-SB</item>
    </string-array>
    <string name="format_disaster_type">Tipe: %1$s</string>
    <string name="format_disaster_source">Sumber: %1$s</string>
    <string name="desc_close_search_bar">Close search bar</string>
    <string name="desc_open_filter_dropdown">Buka filter dropdown</string>
    <string name="label_cancel">Batal</string>
    <string name="label_choose">Pilih</string>
    <string name="desc_filter_disaster_timeperiod">Filter bencana berdasarkan waktu</string>
    <string name="label_header_dialog_filter_disaster_timeperiod">Filter bencana berdasarkan periode waktu</string>
    <string name="content_tma_monitoring_format">Status %1$s pada tanggal %2$s di %3$s</string>
    <string name="label_disaster_empty">Tidak ada bencana yang ditemukan!</string>
    <string name="label_dark_mode">Dark Mode</string>
    <string name="label_actived_dark_mode">Aktifkan dark mode</string>
    <string name="desc_checkbox_dark_mode">Checkbox dark mode</string>
    <string name="label_notification">Notifikasi</string>
    <string name="label_enable_tma_monitoring_notification">Aktifkan notifikasi realtime untuk pemantuan tinggi air</string>
    <string name="desc_checkbox_notification">Checkbox notification</string>
</resources>